迁移工作流指南与设置界面 / port workflow guide and settings UI
将客户端工作流、Guide/AI、Gear 设置窗、共享文字工具和创造物品目录迁到 Forge 1.12.2/Java 8；保留网络取消、窗口输入、无阴影文字及 metadata/NBT 子类型。

Port client workflow, Guide/AI, Gear settings, shared text helpers, and the creative catalog to Forge 1.12.2/Java 8 while preserving cancellation, window input, shadowless text, and metadata/NBT variants.